Add blog controller

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Blog.Entity.PostTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Blog.Entity.PostTranslation.orm.yml
@@ -28,6 +28,9 @@ Nugato\Bundle\NuCmsBundle\Component\Blog\Entity\PostTranslation:
                     updatable: false
                     fields:
                         - title
+        shortDescription:
+            type: text
+            nullable: true
         metaTitle:
             type: string
             length: 255
