--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,17 @@
 # define your env variables for the test env here
-KERNEL_CLASS=App\\Kernel
+KERNEL_CLASS=Kernel
 APP_SECRET='s$cretf0rt3st'
 SHELL_VERBOSITY=-1
+
+###> symfony/framework-bundle ###
+APP_ENV=test
+APP_DEBUG=1
+APP_SECRET=EDITME
+###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For a sqlite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
+DATABASE_URL=mysql://root@127.0.0.1/nucms_%kernel.environment%
+###< doctrine/doctrine-bundle ###
