--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,8 +5,7 @@ doctrine:
     dbal:
         driver: 'pdo_mysql'
         server_version: '5.7'
-        charset: utf8mb4
-        default_table_options:
-            charset: utf8mb4
-            collate: utf8mb4_unicode_ci
+        charset: UTF8
+
         url: '%env(resolve:DATABASE_URL)%'
+
