Add blog lists + refactor yml to yaml

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids.yaml
@@ -2,8 +2,8 @@
 # (c) Jacek Bednarek
 
 imports:
-    - { resource: 'grids/admin/*.yml' }
-    - { resource: 'grids/api/*.yml' }
+    - { resource: 'grids/admin/*.yaml' }
+    - { resource: 'grids/api/*.yaml' }
 
 sylius_grid:
     templates:
