--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources.yaml
@@ -2,7 +2,7 @@
 # (c) Jacek Bednarek
 
 imports:
-    - { resource: 'resources/*.yml' }
+    - { resource: 'resources/*.yaml' }
 
 sylius_resource:
     translation:
