--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/ajax.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/ajax.yaml
@@ -2,5 +2,5 @@
 # (c) Jacek Bednarek
 
 nucms_admin_ajax_taxon:
-    resource: "ajax/taxon.yml"
+    resource: "ajax/taxon.yaml"
     prefix: /taxons
