--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/web.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/web.yaml
@@ -5,6 +5,11 @@ nucms_web_homepage:
     path: /
     defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:homePage' }
 
+nucms_web_blog:
+    resource: web/blog.yaml
+    prefix: /blog
+    trailing_slash_on_root: false
+
 nucms_web_homepage_locale:
     path: /{_locale}/
     defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:homePage', _locale: '%locale%' }
@@ -32,15 +37,3 @@ nucms_web_contact_send:
     path: /contact-form/send
     methods: [POST]
     defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\ContactController:sendForm' }
-
-nucms_web_blog_posts_by_taxon:
-    path: /blog/{slug}
-    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\BlogController:postByTaxon', _locale: '%locale%' }
-    requirements:
-        _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
-
-nucms_web_blog_post_show:
-    path: /blog/post/{slug}
-    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\BlogController:postShow', _locale: '%locale%' }
-    requirements:
-        _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
