--- a/config/packages/nucms.yaml
+++ b/config/packages/nucms.yaml
@@ -1,2 +1,2 @@
 imports:
-    - { resource: "@NugatoNuCmsBundle/Resources/config/config.yml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/config.yaml" }
