--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 nugato_nucms:
-    resource: "@NugatoNuCmsBundle/Resources/config/routing.yml"
+    resource: "@NugatoNuCmsBundle/Resources/config/routing.yaml"
     prefix:   /
