--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yaml
@@ -8,11 +8,11 @@ parameters:
     mailer_user: dev@nugato.pl
 
 imports:
-    - { resource: "@NugatoNuCmsBundle/Resources/config/services.yml" }
-    - { resource: "@NugatoNuCmsBundle/Resources/config/resources.yml" }
-    - { resource: "@NugatoNuCmsBundle/Resources/config/grids.yml" }
-    - { resource: "@NugatoNuCmsBundle/Resources/config/users.yml" }
-    - { resource: "@NugatoNuCmsBundle/Resources/config/fixtures.yml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/services.yaml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/resources.yaml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/grids.yaml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/users.yaml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/fixtures.yaml" }
     - { resource: "@SyliusTaxonomyBundle/Resources/config/app/config.yml" }
 
 framework:
