--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing.yaml
@@ -3,13 +3,13 @@
 
 nucms_admin:
     prefix: /admin
-    resource: routing/admin.yml
+    resource: routing/admin.yaml
     trailing_slash_on_root: false
 
 nucms_web:
     prefix: /
-    resource: routing/web.yml
+    resource: routing/web.yaml
 
 nucms_api:
     prefix: /api/v1
-    resource: routing/api.yml
+    resource: routing/api.yaml
