--- a/composer.json
+++ b/composer.json
@@ -99,6 +99,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "Nugato\\Migrations\\": "src/Migrations/",
             "Nugato\\Tests\\": "tests/"
         },
         "classmap": ["src/Kernel.php"]
