--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Taxon.Entity.TaxonTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Taxon.Entity.TaxonTranslation.orm.yml
@@ -1,7 +1,7 @@
 # This file is part of the NuCms package.
 # (c) Jacek Bednarek
 
-Nugato\Bundle\NuCmsBundle\Entity\TaxonTranslation:
+Nugato\Bundle\NuCmsBundle\Component\Taxon\Entity\TaxonTranslation:
     type: entity
     table: nucms_taxon_translation
     lifecycleCallbacks: {  }
