--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/taxon.yaml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/taxon.yaml
@@ -8,3 +8,12 @@ services:
     Nugato\Bundle\NuCmsBundle\Form\TaxonType:
         arguments: ['%nucms.model.taxon.class%', ['sylius']]
         tags: [{ name: form.type }]
+
+    # Fixtures
+    nucms.fixture.taxon:
+        class: Nugato\Bundle\NuCmsBundle\Component\Taxon\Fixture\TaxonFixture
+        arguments:
+            - '@nucms.factory.taxon'
+            - '@nucms.factory.taxon_translation'
+            - '@nucms.manager.taxon'
+        tags: [sylius_fixtures.fixture]
